# prefect-gcp-template

./: .gitignore  .pre-commit-config.yml  Dockerfile  README.md  pyproject.toml
.github/actions/blocks/: action.yml  blocks.py
.github/actions/container-image/: action.yml
.github/actions/deploy-container/: action.yml
.github/actions/deploy-flows/: action.yml
.github/workflows/: blocks.yml  deploy-container.yml  deploy-flows.yml  quick-start.yml
prefect/flows/: health_check.py  test_flow.py
